Adding new tests for Producto (service and reposository)